cargo-features = ["public-dependency"]

[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["api-bindings", "web-programming"]
description = "An abstraction for Matrix API endpoints."
documentation = "https://docs.rs/ruma-api"
homepage = "https://github.com/ruma/ruma-api"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma-api"
version = "0.10.0"
edition = "2018"

[dependencies]
http = { version = "0.1.18", public = true }
serde_json = { version = "1.0.40", public = true }
serde_urlencoded = { version = "0.6.1", public = true }
ruma-identifiers = { version = "0.14.0", public = true }

percent-encoding = { version = "2.0.0", optional = true }
ruma-api-macros = { path = "ruma-api-macros", optional = true }
serde = { version = "1.0.98", features = ["derive"], public = true, optional = true }
url = { version = "2.0.0", optional = true }

[features]
default = ["with-ruma-api-macros"]
with-ruma-api-macros = ["percent-encoding", "ruma-api-macros", "serde", "url"]

[workspace]
members = [
  "ruma-api-macros",
]
